Finish authorsCloudHandler & listener function

--- a/index.html
+++ b/index.html
@@ -373,28 +373,7 @@
             <h2 class="section-title">Tags</h2>
             <ul class="list tags"></ul>
             <h2 class="section-title">Authors</h2>
-            <ul class="list authors">
-              <li>
-                <a href="#">
-                  <span class="author-name">Kitty Toebean</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="author-name">Theo Tabby</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="author-name">George Tuxedo</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="author-name">Marion Berry</span>
-                </a>
-              </li>
-            </ul>
+            <ul class="list authors"></ul>
           </aside>
         </main>
       </div>
