--- a/index.html
+++ b/index.html
@@ -387,6 +387,15 @@
         </a>
       </li>
     </script>
+    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+      {{#each tags}}
+        <li>
+          <a class='tag-size-{{className}}' href='#{{tag}}'>
+            {{tag}}({{count}})
+          </a>
+        </li>
+      {{/each}}
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
   </body>
