--- a/index.html
+++ b/index.html
@@ -396,6 +396,15 @@
         </li>
       {{/each}}
     </script>
+    <script id="template-authors-cloud-link" type="text/x-handlebars-template">
+      {{#each tags}}
+        <li>
+          <a href='#tag-author-{{name}}'>
+            {{name}}( 'm' )
+          </a>
+        </li>
+      {{/each}}
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
   </body>
